# axum-api-rs

./: Cargo.toml  README.md  api.rest  docker-compose.yml
axum-api-rs/: Cargo.toml  log.toml
axum-api-rs/src/: error.rs  lib.rs  main.rs  models.rs
axum-api-rs/src/endpoints/: users.rs
axum-api-rs/src/schemas/: fields.rs  mod.rs
src/: main.rs
tools/db-seeder/: Cargo.toml
tools/db-seeder/data/: names.json
tools/db-seeder/src/: main.rs
