[package]
name = "axum-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.4.0"}
tokio = { version = "1.17.0", features = ["full"] }
serde = {version="1.0"}
serde_json = {version="1.0"}