[package]
name = "api"
version = "0.1.0"
edition = "2021"
default-run = "api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0" }
tokio = { version = "1.22", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
mongodb = "2.3"
