[package]
name = "api"
version = "0.1.0"
edition = "2021"
default-run = "api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0" }
tokio = { version = "1.22", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
mongodb = { version = "2.3" }
slog = { version = "2.7" }
sloggers = { version = "2.1" }
serdeconv = { version = "0.4" }
log = { version = "0.4.17", features = ["kv_unstable"] }
tracing = { version = "0.1" }
